@@ -92,7 +92,7 @@ public class ExceptionAdapter {
                     methodTag,
                     "AuthorizationErrorResponse is not set"
             );
-            return new ClientException(ClientException.UNKNOWN_ERROR, "Authorization failed with unknown error. Authorization Status: " +authorizationResult.getAuthorizationStatus());
+            return new ClientException(ClientException.AUTHORIZATION_RESULT_NULL_ERROR_RESPONSE, "Authorization error response is null. Authorization Status: " +authorizationResult.getAuthorizationStatus());
         }
 
         //THERE ARE CURRENTLY NO USAGES of INVALID_REQUEST
@@ -340,7 +340,8 @@ public class ExceptionAdapter {
 
     public static BaseException baseExceptionFromException(final Throwable exception) {
         Throwable e = exception;
-        if (exception instanceof ExecutionException) {
+        if (exception instanceof ExecutionException
+                && exception.getCause() != null) {
             e = exception.getCause();
         }
         if (e instanceof BaseException) {
@@ -357,7 +358,8 @@ public class ExceptionAdapter {
         }
 
         Throwable e = exception;
-        if (exception instanceof ExecutionException) {
+        if (exception instanceof ExecutionException
+                && exception.getCause() != null) {
             e = exception.getCause();
         }
 
@@ -393,7 +395,23 @@ public class ExceptionAdapter {
         if (e instanceof TimeoutException) {
             return new ClientException(
                     ClientException.TIMED_OUT,
-                    "A blocking operation has timed out",
+                    "A blocking operation has timed out: " + e.getMessage(),
+                    e
+            );
+        }
+
+        if (e instanceof NullPointerException) {
+            return new ClientException(
+                    ClientException.NULL_POINTER_ERROR,
+                    e.getMessage()
+            );
+        }
+
+
+        if (e instanceof OutOfMemoryError) {
+            return new ClientException(
+                    ClientException.OUT_OF_MEMORY,
+                    e.getMessage(),
                     e
             );
         }
