@@ -22,6 +22,7 @@
 // THE SOFTWARE.
 package com.microsoft.identity.common.java.providers;
 
+import com.microsoft.identity.common.java.controllers.ExceptionAdapter;
 import com.microsoft.identity.common.java.exception.BaseException;
 import com.microsoft.identity.common.java.exception.ClientException;
 import com.microsoft.identity.common.java.logging.Logger;
@@ -159,9 +160,7 @@ public class RawAuthorizationResult {
         }
         return RawAuthorizationResult.builder()
                 .resultCode(ResultCode.NON_OAUTH_ERROR)
-                .exception(new BaseException(ClientException.UNKNOWN_ERROR,
-                        "Unknown error with class: " + e.getClass().getSimpleName(),
-                        e))
+                .exception(ExceptionAdapter.baseExceptionFromException(e))
                 .build();
     }
 
