@@ -1,6 +1,7 @@
 V.Next
 ---------
 - [MINOR] Add null cursor BrokerCommunicationException error category (#2459)
+- [MINOR] Classifying more UNKNOWN_ERRORs (#2460)
 
 Version 17.6.1
 ---------
